--- a/css/product-details.css
+++ b/css/product-details.css
@@ -8,12 +8,11 @@
 #information-container {
     display: flex;
     flex-direction: column;
-    margin-top: 250px;
+    margin-top: 230px;
 }
 
 #product-info {
     display: flex;
-    margin
 }
 
 .product_image {
@@ -23,6 +22,7 @@
 
 .product_title {
     color: white;
+    margin-bottom: 20px;
 }
 
 #info-element {
@@ -49,6 +49,7 @@
     font-style: normal;
     text-transform: uppercase;
     margin-top: 20px;
+    text-align: center;
 }
 
 .product_strength {
@@ -66,6 +67,7 @@
     font-style: normal;
     text-transform: uppercase;
     margin-top: 20px;
+    text-align: center;
 }
 
 #product-description {
