--- a/css/product-details.css
+++ b/css/product-details.css
@@ -82,3 +82,18 @@
     height: 50vh;
     padding-right: 100px;
 }
+
+#product-slider {
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+    margin: 50px 100px;
+    scroll-snap-type: x mandatory;
+
+}
+
+#slider-container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
