--- a/css/product-details.css
+++ b/css/product-details.css
@@ -18,6 +18,7 @@
 .product_image {
     width: 500px;
     float: right;
+    display: block;
 }
 
 .product_title {
@@ -30,6 +31,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     border-left: 1px var(--black) solid;
 }
 
@@ -39,6 +41,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
 .product_series {
@@ -78,19 +81,33 @@
     width: 500px;
     height: 50vh;
     padding-right: 100px;
+    display: block;
 }
 
-#product-slider {
+#vodka-preview {
     display: flex;
     flex-direction: row;
     overflow-x: scroll;
     margin: 50px 100px;
     scroll-snap-type: x mandatory;
+}
 
+#rum-preview {
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+    margin: 50px 100px;
+    scroll-snap-type: x mandatory;
+}
+
+#brandy-preview {
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+    margin: 50px 100px;
+    scroll-snap-type: x mandatory;
 }
 
 #slider-container {
-    display: flex;
-    flex-direction: column;
     text-align: center;
 }
