--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,4 +1,4 @@
-#tabbar {
+.tabbar {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -20,10 +20,6 @@
     padding: 0 20px;
 }
 
-.tabbar a.active {
-    color: var(--green);
-}
-
 #main-nav {
     list-style-type: none;
     padding: 60px;
@@ -31,4 +27,8 @@
 
 #secondary-nav {
     padding: 50px 10px;
+}
+
+.tabbar a.active {
+    color: var(--green);
 }
